@@ -1,6 +1,6 @@
 // TortoiseSVN - a Windows shell extension for easy version control
 
-// Copyright (C) 2003-2011 - TortoiseSVN
+// Copyright (C) 2003-2012 - TortoiseSVN
 
 // This program is free software; you can redistribute it and/or
 // modify it under the terms of the GNU General Public License
@@ -56,6 +56,7 @@ protected:
 public:
     SVNRev  StartRev;
     SVNRev  EndRev;
+    SVNRev  PegRev;
     BOOL    m_bTextView;
     BOOL    m_bIgnoreEOL;
     BOOL    m_bIncludeMerge;
